office location change

--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,7 @@
                                 </div>
                                 <div>
                                     <p class="font-semibold text-slate-900">Head Office</p>
-                                    <p class="text-slate-600">123 Financial District<br>Mumbai, Maharashtra 400001<br>India</p>
+                                    <p class="text-slate-600">Powai<br>Mumbai, Maharashtra<br>India</p>
                                 </div>
                             </div>
 
