--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         <div class="flex flex-col items-center text-center">
                             <!-- Square Image -->
                             <div class="relative w-48 h-48 mb-4">
-                                <img src="https://placehold.co/400x400/14B8A6/FFFFFF?text=Adarsh+Katta" alt="Adarsh Katta" class="w-full h-full object-cover rounded-xl shadow-md">
+                                <img src="adarsh katta.JPG" alt="Adarsh Katta" class="w-full h-full object-cover rounded-xl shadow-md">
                             </div>
 
                             <!-- Name and Title -->
@@ -743,7 +743,7 @@
                         <div class="flex flex-col items-center text-center">
                             <!-- Square Image -->
                             <div class="relative w-48 h-48 mb-4">
-                                <img src="https://placehold.co/400x400/10B981/FFFFFF?text=Minakshi+Maheshwari" alt="Minakshi Maheshwari" class="w-full h-full object-cover rounded-xl shadow-md">
+                                <img src="minakshi maheshwari.jpg" alt="Minakshi Maheshwari" class="w-full h-full object-cover rounded-xl shadow-md">
                             </div>
 
                             <!-- Name and Title -->
