new service page

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <a href="#home" class="text-slate-700 hover:text-teal-600 font-medium transition">Home</a>
                     <a href="#about" class="text-slate-700 hover:text-teal-600 font-medium transition">About</a>
                     <a href="#team" class="text-slate-700 hover:text-teal-600 font-medium transition">Team</a>
+                    <a href="services.html" class="text-slate-700 hover:text-teal-600 font-medium transition">Services</a>
 
                     <!-- Products Dropdown -->
                     <div class="dropdown">
@@ -199,6 +200,7 @@
                 <a href="#home" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Home</a>
                 <a href="#about" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">About</a>
                 <a href="#team" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Team</a>
+                <a href="services.html" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Services</a>
                 <a href="#products" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Products</a>
                 <a href="#calculators" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Calculators</a>
                 <a href="javascript:void(0);" onclick="showBlogPage()" class="block text-slate-700 hover:text-teal-600 font-medium px-3 py-2 rounded-md transition">Blog</a>
@@ -413,10 +415,10 @@
 
                     <div class="flex items-center justify-between pt-6 border-t border-teal-200">
                         <div>
-                            <p class="text-sm text-slate-600">Starting From</p>
-                            <p class="text-xl font-bold text-teal-600">₹500/month</p>
+                            <!-- <p class="text-sm text-slate-600">Starting From</p>
+                            <p class="text-xl font-bold text-teal-600">₹500/month</p> -->
                         </div>
-                        <a href="#contact" class="inline-flex items-center px-4 py-2 bg-teal-600 text-white font-semibold rounded-lg hover:bg-teal-700 transition">
+                        <a href="services.html#wealth-building" class="inline-flex items-center px-4 py-2 bg-teal-600 text-white font-semibold rounded-lg hover:bg-teal-700 transition">
                             Learn More
                             <i data-feather="arrow-right" class="ml-2 h-4 w-4"></i>
                         </a>
@@ -448,10 +450,10 @@
 
                     <div class="flex items-center justify-between pt-6 border-t border-green-200">
                         <div>
-                            <p class="text-sm text-slate-600">Starting From</p>
-                            <p class="text-xl font-bold text-green-600">₹500/month</p>
+                            <!-- <p class="text-sm text-slate-600">Starting From</p>
+                            <p class="text-xl font-bold text-green-600">₹500/month</p> -->
                         </div>
-                        <a href="#contact" class="inline-flex items-center px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition">
+                        <a href="services.html#insurance-protection" class="inline-flex items-center px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition">
                             Learn More
                             <i data-feather="arrow-right" class="ml-2 h-4 w-4"></i>
                         </a>
@@ -483,10 +485,10 @@
 
                     <div class="flex items-center justify-between pt-6 border-t border-blue-200">
                         <div>
-                            <p class="text-sm text-slate-600">Approval Time</p>
-                            <p class="text-xl font-bold text-blue-600">48 Hours</p>
+                            <!-- <p class="text-sm text-slate-600">Approval Time</p>
+                            <p class="text-xl font-bold text-blue-600">48 Hours</p> -->
                         </div>
-                        <a href="#contact" class="inline-flex items-center px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">
+                        <a href="services.html#loans-financing" class="inline-flex items-center px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">
                             Learn More
                             <i data-feather="arrow-right" class="ml-2 h-4 w-4"></i>
                         </a>
@@ -495,9 +497,9 @@
             </div>
 
             <!-- Detailed Services Section -->
-            <div class="mt-16 space-y-6 max-w-4xl mx-auto">
+            <!-- <div class="mt-16 space-y-6 max-w-4xl mx-auto"> -->
                 <!-- Mutual Fund Advisory -->
-                <div class="bg-gradient-to-r from-teal-50 to-cyan-50 rounded-xl p-8 border-l-4 border-teal-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
+                <!-- <div class="bg-gradient-to-r from-teal-50 to-cyan-50 rounded-xl p-8 border-l-4 border-teal-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 bg-teal-600 rounded-lg p-3 mr-5 group-hover:scale-110 transition-transform duration-300">
                             <i data-feather="trending-up" class="text-white h-6 w-6"></i>
@@ -507,10 +509,10 @@
                             <p class="text-slate-700 leading-relaxed">We transform your investments into wealth-building engines. Our experts review your current portfolio, align it with your life goals, and recommend strategic changes with clear explanations. With quarterly reviews, your investments stay on track as your life evolves.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Insurance Advisory -->
-                <div class="bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl p-8 border-l-4 border-green-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
+                <!-- <div class="bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl p-8 border-l-4 border-green-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 bg-green-600 rounded-lg p-3 mr-5 group-hover:scale-110 transition-transform duration-300">
                             <i data-feather="shield" class="text-white h-6 w-6"></i>
@@ -520,10 +522,10 @@
                             <p class="text-slate-700 leading-relaxed">Your protection matters more than our commission. We decode complex policies, ensuring you're covered for real risks—not oversold. From selection to claims, we're your advocate, making insurance work for you.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Loan Solutions -->
-                <div class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl p-8 border-l-4 border-blue-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
+                <!-- <div class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl p-8 border-l-4 border-blue-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 bg-blue-600 rounded-lg p-3 mr-5 group-hover:scale-110 transition-transform duration-300">
                             <i data-feather="home" class="text-white h-6 w-6"></i>
@@ -533,10 +535,10 @@
                             <p class="text-slate-700 leading-relaxed">Whether you're buying your dream home or fueling business growth, we secure the best rates and fastest approvals. Our network and expertise turn loan applications from headaches into stepping stones.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Tax Consultancy -->
-                <div class="bg-gradient-to-r from-orange-50 to-amber-50 rounded-xl p-8 border-l-4 border-orange-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
+                <!-- <div class="bg-gradient-to-r from-orange-50 to-amber-50 rounded-xl p-8 border-l-4 border-orange-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 bg-orange-600 rounded-lg p-3 mr-5 group-hover:scale-110 transition-transform duration-300">
                             <i data-feather="file-text" class="text-white h-6 w-6"></i>
@@ -546,10 +548,10 @@
                             <p class="text-slate-700 leading-relaxed">As chartered accountants, we speak the language of tax savings fluently. We craft strategies that keep more money in your pocket legally, turning tax planning from a burden into an opportunity.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Financial Education -->
-                <div class="bg-gradient-to-r from-purple-50 to-pink-50 rounded-xl p-8 border-l-4 border-purple-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
+                <!-- <div class="bg-gradient-to-r from-purple-50 to-pink-50 rounded-xl p-8 border-l-4 border-purple-500 shadow-sm hover:shadow-lg transition-all duration-300 hover:translate-x-2 group">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 bg-purple-600 rounded-lg p-3 mr-5 group-hover:scale-110 transition-transform duration-300">
                             <i data-feather="book-open" class="text-white h-6 w-6"></i>
@@ -560,7 +562,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Closing Statement -->
             <div class="mt-12 text-center">
