Added AIF and PMS advisory in services page.

--- a/services.html
+++ b/services.html
@@ -115,33 +115,55 @@
 
                             <!-- Services Grid -->
                             <div class="space-y-4">
-                                <!-- Mutual Fund Advisory -->
+                                <!-- Comprehensive Investment Advisory -->
                                 <div class="bg-white rounded-xl p-6 service-card border-l-4 border-teal-500 shadow-sm">
                                     <div class="flex items-start">
                                         <div class="bg-teal-100 rounded-lg p-3 mr-4">
                                             <i data-feather="pie-chart" class="text-teal-600 h-6 w-6"></i>
                                         </div>
                                         <div class="flex-1">
-                                            <h3 class="text-xl font-bold text-slate-900 mb-2">Mutual Fund Advisory</h3>
-                                            <p class="text-slate-700 mb-4">We transform your investments into wealth-building engines. Our experts review your current portfolio, align it with your life goals, and recommend strategic changes with clear explanations. With quarterly reviews, your investments stay on track as your life evolves.</p>
-                                            <ul class="space-y-2">
-                                                <li class="flex items-center text-slate-600">
-                                                    <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
-                                                    Portfolio Review & Analysis
-                                                </li>
-                                                <li class="flex items-center text-slate-600">
-                                                    <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
-                                                    Goal-Aligned Fund Selection
-                                                </li>
-                                                <li class="flex items-center text-slate-600">
-                                                    <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
-                                                    Quarterly Performance Reviews
-                                                </li>
-                                                <li class="flex items-center text-slate-600">
-                                                    <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
-                                                    SIP Planning & Optimization
-                                                </li>
-                                            </ul>
+                                            <h3 class="text-xl font-bold text-slate-900 mb-4">Comprehensive Investment Advisory</h3>
+
+                                            <!-- Mutual Fund Advisory -->
+                                            <div class="mb-4">
+                                                <h4 class="text-lg font-semibold text-teal-600 mb-2">Mutual Fund Advisory</h4>
+                                                <p class="text-slate-700">We transform your investments into wealth-building engines. Our experts review your current portfolio, align it with your life goals, and recommend strategic changes with clear explanations. With quarterly reviews, your investments stay on track as your life evolves.</p>
+                                            </div>
+
+                                            <!-- AIF (Alternative Investment Funds) -->
+                                            <div class="mb-4">
+                                                <h4 class="text-lg font-semibold text-teal-600 mb-2">Alternative Investment Funds (AIF) Advisory</h4>
+                                                <p class="text-slate-700">Access exclusive investment opportunities beyond traditional markets. We guide you through sophisticated investment vehicles like Category I, II, and III AIFs, helping you diversify into venture capital, private equity, hedge funds, and structured products tailored for high-net-worth individuals.</p>
+                                            </div>
+
+                                            <!-- Portfolio Advisory -->
+                                            <div class="mb-6">
+                                                <h4 class="text-lg font-semibold text-teal-600 mb-2">Portfolio Management Advisory</h4>
+                                                <p class="text-slate-700">Get expert guidance on building and managing a holistic investment portfolio. We provide comprehensive advisory across asset classes—equities, debt, gold, real estate, and alternative investments—creating a balanced portfolio strategy aligned with your risk profile and financial objectives.</p>
+                                            </div>
+
+                                            <!-- Common Features for All Services -->
+                                            <div class="pt-4 border-t border-slate-200">
+                                                <p class="text-sm font-semibold text-slate-900 mb-3">Our Advisory Includes:</p>
+                                                <ul class="space-y-2">
+                                                    <li class="flex items-center text-slate-600">
+                                                        <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
+                                                        Portfolio Review & Analysis
+                                                    </li>
+                                                    <li class="flex items-center text-slate-600">
+                                                        <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
+                                                        Goal-Aligned Fund Selection
+                                                    </li>
+                                                    <li class="flex items-center text-slate-600">
+                                                        <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
+                                                        Quarterly Performance Reviews
+                                                    </li>
+                                                    <li class="flex items-center text-slate-600">
+                                                        <i data-feather="check-circle" class="text-teal-600 h-5 w-5 mr-2"></i>
+                                                        SIP Planning & Optimization
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
